--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,79 @@
+.App {
+  background-color: #282a36;
+  color: #f8f8f2;
+}
+
+.Header {
+  -moz-box-shadow: 3px 3px 5px 6px #202020;
+  -webkit-box-shadow: 3px 3px 5px 6px #202020;
+  box-shadow: 3px 3px 5px 6px #202020;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.ArticleCard,
+.CommentCard {
+  margin: 25px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #44475a;
+}
+
+.SingleArticle {
+  padding: 30px;
+}
+
+.avatar {
+  width: 210px;
+  height: auto;
+}
+
 ul {
   list-style-position: inside;
-  padding-inline-start: 0px;
+  padding: 0px;
 }
 
 li {
   list-style-type: none;
 }
 
+a {
+  color: #ff79c6;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #50fa7b;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
+button {
+  margin: 8px;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  background-color: #bd93f9;
+}
+
 textarea {
   resize: vertical;
   width: 90%;
-}
-
-.ArticleCard {
-  margin: 5px;
-  background-color: antiquewhite;
-}
-
-.avatar {
-  width: 210px;
-  height: auto;
 }
