--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@
   height: auto;
 }
 
+h2 {
+  color: #f1fa8c;
+}
+
 ul {
   list-style-position: inside;
   padding: 0px;
@@ -61,7 +65,7 @@ a:active {
 }
 
 button {
-  margin: 8px;
+  margin: 12px;
   border-radius: 4px;
   border: none;
   color: white;
@@ -71,6 +75,15 @@ button {
   display: inline-block;
   font-size: 16px;
   background-color: #bd93f9;
+  transition-duration: 0.4s;
+}
+
+button:hover {
+  background-color: #ff5555;
+  -moz-box-shadow: 0 3px 5px 0 #202020;
+  -webkit-box-shadow: 0 3px 5px 0 #202020;
+  box-shadow: 0 3px 5px 0 #202020;
+  transform: scale(1.2);
 }
 
 textarea {
