more awful style added

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+html {
+  scrollbar-color: #ee8fc5 #202020;
+}
+
+body {
+  background-color: #2a2d41;
+  margin: 0px;
+  padding: 0px;
+}
+
 .App {
-  background-color: #282a36;
   color: #f8f8f2;
 }
 
@@ -10,19 +19,86 @@
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  padding: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  height: 40px;
+  align-items: center;
+}
+
+.user-nav {
+  display: flex;
+  align-items: center;
+}
+.user-nav a {
+  margin-left: 8px;
+}
+
+.header-avatar {
+  object-fit: cover;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+}
+
+.Sort {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: left;
+}
+
+.loadingSVG {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.article-list,
+.comment-list,
+.Login {
+  margin: 10px;
+  list-style-position: inside;
+  padding-left: 0;
 }
 
 .ArticleCard,
 .CommentCard {
-  margin: 25px;
-  padding: 10px;
   border-radius: 10px;
-  background-color: #44475a;
+  background-color: #38373f;
+  -moz-box-shadow: 0 3px 5px 0 #202020;
+  -webkit-box-shadow: 0 3px 5px 0 #202020;
+  box-shadow: 0 3px 5px 0 #202020;
+  list-style-type: none;
+  padding: 1px 16px 1px;
+  margin-bottom: 20px;
 }
 
 .SingleArticle {
-  padding: 30px;
+  padding: 0px;
+}
+
+.article-body {
+  margin: 16px;
+}
+
+.topic-list {
+  margin: 10px;
+  list-style-position: inside;
+  padding-left: 0;
+}
+
+.topic-li {
+  list-style-type: none;
+}
+.topic-li h2 {
+  margin-bottom: 0;
+}
+.topic-li p {
+  margin-top: 4px;
+}
+
+.topic-header {
+  margin: 32px 10px 0px;
 }
 
 .avatar {
@@ -30,21 +106,18 @@
   height: auto;
 }
 
-h2 {
-  color: #f1fa8c;
-}
-
-ul {
-  list-style-position: inside;
-  padding: 0px;
-}
-
-li {
-  list-style-type: none;
+.icons {
+  width: 16px;
+  height: auto;
+  margin-right: 4px;
 }
 
 a {
-  color: #ff79c6;
+  color: #ee8fc5;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 a:link {
@@ -57,7 +130,7 @@ a:visited {
 
 a:hover {
   text-decoration: underline;
-  color: #50fa7b;
+  color: #3abd5d;
 }
 
 a:active {
@@ -65,16 +138,16 @@ a:active {
 }
 
 button {
-  margin: 12px;
+  margin: 10px 0 10px 10px;
   border-radius: 4px;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 6px 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  background-color: #bd93f9;
+  background-color: #3abd5d;
   transition-duration: 0.4s;
 }
 
@@ -83,10 +156,82 @@ button:hover {
   -moz-box-shadow: 0 3px 5px 0 #202020;
   -webkit-box-shadow: 0 3px 5px 0 #202020;
   box-shadow: 0 3px 5px 0 #202020;
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
-textarea {
+.PostComment {
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  overflow: hidden;
+}
+
+.comment-textarea {
   resize: vertical;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  width: 100%;
+  background-color: #151515;
+  border: 1px solid #151515;
+  color: #00ff00;
+  padding: 8px;
+  margin-top: 4px;
+}
+
+.comment-submit {
+  float: right;
+}
+
+.username-box {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 90%;
+  background-color: #151515;
+  border: none;
+  color: #00ff00;
+  margin: 10px 0 10px 10px;
+  border-radius: 4px;
+  border: none;
+  padding: 12px 12px;
+  font-size: 16px;
+}
+
+.login-button {
+  width: 90%;
+}
+
+.login-h4 {
+  text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .Header {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+
+  .Header .icons {
+    display: none;
+  }
+
+  .Sort {
+    justify-content: space-evenly;
+  }
+
+  .Sort button {
+    margin: 4px 0 4px;
+  }
+
+  .card-info {
+    font-size: x-small;
+    font-weight: lighter;
+  }
+  .icons {
+    width: 12px;
+    height: auto;
+    margin-right: 4px;
+  }
 }
