--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,8 @@ button:hover {
   overflow: hidden;
 }
 
-.comment-textarea {
+.comment-textarea,
+.post-textarea {
   resize: vertical;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -194,6 +195,10 @@ button:hover {
   color: #00ff00;
   padding: 8px;
   margin-top: 4px;
+}
+
+.post-textarea {
+  font-size: x-large;
 }
 
 .comment-submit {
@@ -244,15 +249,18 @@ button:hover {
 }
 
 .modal {
-  border-radius: 10px;
+  border-radius: 4px;
   position: fixed !important;
-  min-height: 92vh;
+  min-height: auto;
   z-index: 1;
   background-color: #2a2d41;
   margin: 0 20px 0;
   width: calc((100%) - 40px);
   box-shadow: 0px 0px 40px 25px #202020;
+  padding: 5px;
+}
 
+.fade-in {
   animation: fadeIn 0.4s;
   -webkit-animation: fadeIn 0.4s;
   -moz-animation: fadeIn 0.4s;
