--- a/src/App.css
+++ b/src/App.css
@@ -290,6 +290,10 @@ button:hover {
   margin-bottom: 8px;
 }
 
+.modal-header {
+  width: 100%;
+}
+
 .x-button {
   margin: 0;
   border: none;
@@ -297,11 +301,10 @@ button:hover {
   padding: 0;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   background-color: transparent;
   transition-duration: 0.4s;
-  float: inline-end;
+  float: right;
 }
 
 .x-button:hover {
